...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:fontFamily="@font/roboto" />

                <EditText
                    android:id="@+id/event_name_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:ems="23"
                    android:fontFamily="@font/roboto"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:fontFamily="@font/roboto" />

                <EditText
                    android:id="@+id/event_description_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:ems="23"
                    android:fontFamily="@font/roboto"
...
                            android:backgroundTint="@android:color/darker_gray"
                            android:ems="23"
                            android:fontFamily="@font/roboto"
                            android:text=" Start Date"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@id/event_date_editable"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:fontFamily="@font/roboto" />

                        <EditText
                            android:id="@+id/event_date_editable"
...
                            android:backgroundTint="@android:color/darker_gray"
                            android:ems="23"
                            android:fontFamily="@font/roboto"
                            android:text=" End Date"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@id/event_date_editable_end"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:fontFamily="@font/roboto" />

                        <EditText
                            android:id="@+id/event_date_editable_end"
...
                            android:backgroundTint="@android:color/darker_gray"
                            android:ems="23"
                            android:fontFamily="@font/roboto"
                            android:text=" Start Time"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@id/event_time_editable"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:fontFamily="@font/roboto" />

                        <EditText
                            android:id="@+id/event_time_editable"
...
                            android:backgroundTint="@android:color/darker_gray"
                            android:ems="23"
                            android:fontFamily="@font/roboto"
                            android:text=" End Time"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@id/event_time_editable_end"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:fontFamily="@font/roboto" />

                        <EditText
                            android:id="@+id/event_time_editable_end"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/time_layout"
                    tools:fontFamily="@font/roboto" />


                <EditText
                    android:id="@+id/event_location_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/darker_gray"
                    android:ems="23"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_location_editable"
                    tools:fontFamily="@font/roboto" />

                <EditText
                    android:id="@+id/event_maximum_attendees_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/darker_gray"
                    android:ems="23"
                    android:fontFamily="@font/roboto"
                    android:inputType="number"
...
                            android:id="@+id/view_qr_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="View QR"
                            app:cornerRadius="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/generateQR"
                            app:layout_constraintStart_toEndOf="@+id/reuseQR"
                            app:layout_constraintTop_toTopOf="parent">


                        </Button>

...
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:strokeWidth="0.25dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <!-- Create Event Button -->
                    <Button
                        android:id="@+id/create_event_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/create_event"
                        android:textSize="22dp"
...
