...
        android:layout_marginTop="120dp"
        android:padding="4dp"
        android:clipToOutline="true"/>


    <TextView
        android:id="@+id/view_qr_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="Back"
        android:textColor="@color/white"
...
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Poster_QR_Code"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="7dp"
            android:text="Poster QR Code"
            android:textSize="14dp"
...
