...
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="qr_code_display">Your QR Code will be:\n%s</string>
    <string name="cancel">Cancel</string>
    <string name="create_event">Create Event</string>
    <string name="google_maps_api">AIzaSyA7KifextDr3K6nGzosM-EJDDaHpPyRHqs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="eventSorting">
...
