...
                    android:layout_height="35dp"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="Send"
                    android:textSize="9sp"
                    app:cornerRadius="8dp" />


                <EditText
                    android:id="@+id/announcement_editable"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="1"
                    android:gravity="top|start"
                    android:maxLines="3"

...
