<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/qr_display_event_name_text"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:text="Error: Event name not found"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/qr_display_qr_imageview"
            android:layout_width="match_parent"
            android:layout_height="496dp"
            tools:srcCompat="@android:drawable/ic_menu_report_image" />

        <Button
            android:id="@+id/view_qr_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ok" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>